# website

./: .gitignore  Cargo.toml  README.md  package.json
assets/css/: style.css
assets/html/: public.html
assets/js/: global.js
src/: main.rs
src/routes/: about.rs  assets.rs  dreams.rs  error.rs  index.rs  links.rs  mod.rs
src/util/: misc.rs
templates/: about-me.html  dreams.html  error.html  home.html  links.html
