[package]
name = "clarke_gg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.2"
askama = "0.10"
dotenv = "0.15.0"
async-std = "1.12.0"
once_cell = "1.16.0"
log = "0.4.0"
env_logger = "0.9.0"
uuid = { version = "1.2.1", features = ["v4", "fast-rng", "macro-diagnostics"] }

[dev-dependencies]
actix-rt = "2.7.0"